--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
+    "tether": "^1.4.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
